crates/ars-i18n/tests/ui/translate_malformed_placeholder_char.stderr
error: Translate placeholders must use Rust field identifiers like {count}
 --> tests/ui/translate_malformed_placeholder_char.rs:6:22
  |
6 |     #[translate(en = "{count:n} items")]
  |                      ^^^^^^^^^^^^^^^^^
